@@ -1,3 +1,9 @@
+July 31 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Added whip of Calamus
+	* Tweaked items thrown at doors
+	* Possibly something else (sorry. Bad commit)
+
 July 30 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Mistress hair color now depends on configuration
